<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_buscar"
          android:icon="@drawable/ic_buscar_white"
          android:title="@string/action_buscar"
          app:showAsAction="always"
    />
    <item android:id="@+id/action_atualizar"
          android:icon="@drawable/ic_atualizar_white"
          android:title="@string/action_atualizar"
          app:showAsAction="always"/>
    <item android:id="@+id/action_add"
          android:icon="@drawable/ic_adicionar_white"
          android:title="@string/action_add"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_config"
          android:title="@string/action_config"
          app:showAsAction="never"/>
    <item android:id="@+id/action_sair"
          android:title="@string/action_sair"
          app:showAsAction="never"/>


</menu>