<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_menu_lateral"
        android:fitsSystemWindows="true">

        <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".PrincipalActivity"
                android:orientation="vertical"
                android:background="@drawable/login_bg">
                <include layout="@layout/toolbar"/>
                    <Button
                            android:text="@string/mercados_abertos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:textColor="@color/colorAccent"
                            android:layout_marginLeft="70dp"
                            android:layout_marginRight="70dp"
                            android:layout_gravity="center"
                            android:background="@drawable/buttons_bg"
                            android:id="@+id/mercados_abertos"/>
                    <Button
                            android:text="@string/melhores_preços"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:textColor="@color/colorAccent"
                            android:layout_marginLeft="70dp"
                            android:layout_marginRight="70dp"
                            android:layout_gravity="center"
                            android:background="@drawable/buttons_bg"
                            android:id="@+id/melhores_precos"/>
                    <Button
                            android:text="@string/promocoes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:textColor="@color/colorAccent"
                            android:layout_marginLeft="70dp"
                            android:layout_marginRight="70dp"
                            android:layout_gravity="center"
                            android:background="@drawable/buttons_bg"
                            android:id="@+id/comparar_precos"/>
                    <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="gone"
                            android:id="@+id/load"/>

            </LinearLayout>

    <android.support.design.widget.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/menu_lateral"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/menu_lateral_cabecalho"
            app:menu="@menu/menu_lateral">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>